--- a/ru/apps.html
+++ b/ru/apps.html
@@ -133,11 +133,11 @@
                     </div>
                   </div>  
                     <div class="lead__links-container apps__lead-links-container">
-                      <ul class="lead__download-links-list">
-                        <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                        <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
-                      </ul>
-                    </div>
+              <ul class="lead__download-links-list">
+                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+              </ul>
+            </div>
                 </div>
             </div>
         </section>
@@ -157,7 +157,7 @@
                     <li class="apps__briefs-item">
                         <div class="apps__brief-text-container">
                             <h2 class="section__title">Лента SFERA</h2>
-                            <p class="apps__brief-text">ASAP — мультифункциональный мессенджер, который вберет в&nbsp;себя лучшие функции существующих мессенджеров.</p>
+                            <p class="apps__brief-text">Агрегатор контента SFERA, который будет формировать вашу новостную ленту с развивающим контентом. Сервис не решает за Вас, что Вам показывать. Вы увидите весь контент на который подписаны, плюс лучшее в системе за определенный промежуток времени.</p>
                         </div>
                         <div class="apps__brief-images-container">
                             <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.jpg" class="apps__brief-image" /></div>
@@ -167,7 +167,7 @@
                     <li class="apps__briefs-item">
                         <div class="apps__brief-text-container">
                             <h2 class="section__title">ASAP</h2>
-                            <p class="apps__brief-text">Агрегатор контента SFERA, который будет формировать вашу новостную ленту с&nbsp;развивающим контентом. Сервис не&nbsp;решает за&nbsp;вас, что вам показывать. Вы увидите весь контент на&nbsp;который подписаны, плюс лучшее в&nbsp;системе за&nbsp;определенный промежуток времени.</p>
+                            <p class="apps__brief-text">ASAP — мультифункциональный мессенджер, который вберет в себя лучшие функции существующих мессенджеров. </p>
                         </div>
                         <div class="apps__brief-images-container">
                             <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.jpg" class="apps__brief-image" /></div>
