--- a/ru/investment.html
+++ b/ru/investment.html
@@ -79,8 +79,101 @@
       </div>
     </header>
     <main>
-
-      
+<div class="investment">
+  <div class="investment__column">
+    <div class="investment-body">
+      <div class="investment-body-content">
+        <div class="investment-body__title">Инвестиции ускоряют нашу работу</div>
+        <div class="investment-body__text"><p>На данный момент финансирование проекта осуществляется засчёт собственных средств и средств инвесторов.</p>
+          <p>Все привлекаемые инвестиции идут непосредственно на оплату работы наших программистов.</p></div>
+        <ul class="lead__download-links-list">
+          <li class="lead__download-links-list-item"><a href="" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android</a></li>
+          <li class="lead__download-links-list-item"><a href="" class="lead__download-link button button_theme_dark button_type_ios">Cкачать на ois</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="investment__column">
+    <div class="investment__image ibg"><img src="../assets/img/investment/investment_phones.png" alt=""></div>
+  </div>
+</div>
+<div class="card">
+  <div class="card__column">
+    <div class="card__image ibg"><img src="../assets/img/investment/investment_card.png" alt="" /></div>
+  </div>
+  <div class="card__column">
+    <div class="card-body">
+      <div class="card-body-content">
+        <ul class="card-body__link">
+          <li class="card-body__list_1">1.  Скопируйте номер карты и отправьте желаемую сумму.</li>
+          <li class="card-body__list_2">4584-4328-3958-7574 <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
+          <li class="card-body__list_3">2.  Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
+          <li class="card-body__list_4">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
+        </ul>
+        <div class="card-body__text">Осуществляя перевод, вы подтверждаете, что четко понимаете основы и понятия венчурного инвестирования и принципов работы стартапа, а также все риски, связанные с этим.</div>
+        <div class="card-body-undertext">
+          <a href="" class="card-body-undertext__item">Что такое венчурное инвестирование ></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="sfera">
+  <div class="sfera__column">
+    <div class="sfera-body">
+      <div class="sfera-body-content">
+        <div class="sfera-body__uptext">На данном этапе мы не можем четко сказать, как и когда инвестор получит документальное подтверждение. Но это точно произойдёт. Возможны два варианта:</div>
+        <ul class="sfera-body__link">
+          <li class="sfera-body__list">подписание опционов с последующим переводом в акции;</li>
+          <li class="sfera-body__list">предоставление токенов.</li>
+        </ul>
+        <div class="sfera-body__downtext">Наша главная цель в работе с инвесторами — это Х100 для инвесторов.</div>
+      </div>
+    </div>
+  </div>
+  <div class="sfera__column">
+    <div class="sfera__image ibg"><img src="../assets/img/investment/investment_logo.png" alt=""></div>
+  </div>
+</div>
+<div class="venchur">
+  <div class="venchur-body">
+    <div class="venchur-body-content">
+      <div class="venchur-body__title">Что такое венчурные инвестиции</div>
+      <div class="venchur-body__undertitle">Цитата из книги: <p class="venchur-body__undertitle_text">«Как вдохнуть в бизнес новую жизнь. PIXAR» Лоуренс Леви</p></div>
+      <ul class="venchur-body__link">
+        <li class="venchur-body-list">Стартапы держались вместе засчет возможности для их основателей и сотрудников делить трофеи. Это было одной из самых главных побудительных мер присоединиться к крайне рискованному предприятию, а не к более стабильной компании. Механизмом участия в успехе стартапа был опцион на покупку акций — бумажного обязательства, ставшего валютой Кремниевой долины. Опционы на акции превратили Кремневую долину в современный аналог золотой лихорадки. 
+          Опцион на акции дает сотруднику возможность в будущем приобретать акции в компании. Его ценность состоит в том, что сотрудник не должен платить за акции сразу, но цена, которую он заплатит в свое время, устанавливается в тот момент, когда сотрудник получает этот опцион, обычно тогда, когда он или она приходит на работу в компанию. Если компания становится очень успешной после того, как человек пришел туда работать, ценность акций может вырасти до астрономических сумм, но сотрудник заплатит именно ту сумму, которая была установлена в момент получения опциона. Остальное — его прибыль. Например, если акция компании на момент поступления человека стоит 1 доллар за штуку и если он получает опцион на покупку тысячи акций, пять лет спустя, если акции стоят по 100 долларов за штуку, человек все равно заплатит за них по 1 доллару. Он или она получит 99 долларов прибыли за каждую акцию, или 99 тысяч долларов прибыли. Именно так Кремниевая долина рождает на свет новых миллионеров и миллиардеров.</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="sfera-2">
+  <div class="sfera-2__column">
+    <div class="sfera-2__image ibg"><img src="../assets/img/investment/investment_logo.png" alt=""></div>
+  </div>
+  <div class="sfera-2__column">
+    <div class="sfera-2-body">
+      <div class="sfera-2-body-content">
+        <div class="sfera-2-body__uptext">Не делайте этого, если</div>
+        <ul class="sfera-2-body__link">
+          <li>Считаете, что это обман.</li>
+          <li>Не верите в проект.</li>
+          <li>Выделяемая сумма для вас значима.</li>
+          <li>Вы не понимаете основ инвестирования в стартапы.</li>
+        </ul>
+        <div class="sfera-2-body__downtext">Гарантией выполнения наших обязательств является репутация компании сейчас и в будущем.</div>
+      </div>
+    </div>
+  </div>
+  
+</div>
+<div class="goal">
+  <div class="goal-body">
+    <div class="goal-body-content">
+      <div class="goal-body__title">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</div>
+    </div>
+  </div>
+</div>
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
