добавил ссылка главная

--- a/ru/news.html
+++ b/ru/news.html
@@ -48,14 +48,7 @@
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__dropdown-menu dropdown-menu"><a class="main-nav__link" href="about.html">О проекте</a>
-              <div class="dropdown-menu__content main-nav__submenu">
-                <ul class="main-nav__list main-nav__submenu-list">
-                  <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте с любовью</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="about.html">Привет, котаны!</a></li>
-                </ul>
-              </div>
-            </li>
+            <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="#">Новости</a></li>
