--- a/index.html
+++ b/index.html
@@ -52,21 +52,14 @@
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__dropdown-menu dropdown-menu"><a class="main-nav__link" href="./ru/about.html">О проекте</a>
-              <div class="dropdown-menu__content main-nav__submenu">
-                <ul class="main-nav__list main-nav__submenu-list">
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">О проекте с любовью</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Привет, котаны!</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/apps.html">Приложения</a>
-            </li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/downloads.html">Скачать</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/news.html">Новости</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/startups.html">Стартапам</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/investment.html">Инвестиции</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="./ru/team.html">Команда</a>
+						<li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/about.html">О проекте</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/apps.html">Приложения</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/downloads.html">Скачать</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/news.html">Новости</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/startups.html">Стартапам</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/investment.html">Инвестиции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="./ru/team.html">Команда</a>
             </li>
           </ul>
           <div class="langs">
