--- a/ru/about.html
+++ b/ru/about.html
@@ -49,14 +49,8 @@
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__dropdown-menu dropdown-menu"><a class="main-nav__link" href="#">О проекте</a>
-              <div class="dropdown-menu__content main-nav__submenu">
-                <ul class="main-nav__list main-nav__submenu-list">
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">О проекте с любовью</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Привет, котаны!</a></li>
-                </ul>
-              </div>
-            </li>
+            <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="#">О проекте</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="../ru/apps.html">Приложения</a>
             </li>
             <li class="main-nav__item"> <a class="main-nav__link" href="../ru/downloads.html">Скачать</a></li>
