--- a/ru/startups.html
+++ b/ru/startups.html
@@ -48,20 +48,14 @@
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__dropdown-menu dropdown-menu"><a class="main-nav__link" href="about.html">О проекте</a>
-              <div class="dropdown-menu__content main-nav__submenu">
-                <ul class="main-nav__list main-nav__submenu-list">
-                  <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте с любовью</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="about.html">Привет, котаны!</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="startups.html">Стартапам</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="investment.html">Инвестиции</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="team.html">Команда</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="apps.html">Приложения</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="downloads.html">Скачать</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="news.html">Новости</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="startups.html">Стартапам</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="investment.html">Инвестиции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
             <ul class="langs__list">
