--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 				</article>
 				<div class="star-six"></div>
 			</section>
+<section class="section-card">
 			<p class="about-as-heading">ЧТО ЕСТЬ <span class="about-as-heading-color"> УЖЕ СЕЙЧАС</span></p>
 			<div class="star-seven"></div>
 			<div class="star-eight"></div>
-
 			<div class="card">
 				<div class="card-block">
 					<button class="card-block-top">ASAP</button>
@@ -280,10 +280,10 @@
 					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
 				</div>
 			</div>
-
+		</section>
 			<img src="./assets/image-lending/1920/line.png" alt="" class="what-is-already-background"></img>
-			<div class="star-nine"></div>
-			<div class="star-ten"></div> -->
+			<!-- <div class="star-nine"></div>
+			<div class="star-ten"></div> --> 
 			<section class="block-seven" id="download">
 
 				<article>
@@ -296,25 +296,25 @@
 							<a href="" class="block-six-link">#Мессенджер</a>
 							<a href="" class="block-six-link">#Сеть</a>
 						</div>
-						<p class="block-seven-p">Присоединяйся</p>
+						<p class="block-seven-p">ПРИСОЕДИНЯЙСЯ</p>
 						<p class="block-seven-text">SFERA находится в не политики.<br>Мы считаем своим домом весь мир<br>и хотим работать на благо всех людей <br>на планете.</p>
 						<p class="block-seven-text">Каждый сервис в системе, либо<br>
 							полностью уникален, либо имеет<br>
 							отличительные особенности в сравнении<br>с аналогами.</p>
-						<div class="block-seven-buttons">
+						<!-- <div class="block-seven-buttons">
 							<button class="button-android"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="provisions_android__links_link">СКАЧАТЬ ANDROID</a></button>
 							<button class="button-iOS"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="provisions__links_link">СКАЧАТЬ iOS</a></button>
-						</div>
+						</div> -->
 					</div>
 				</article>
 			</section>
-			<section class="block-eight">
+			<!-- <section class="block-eight">
 				<div class="star-eleven"></div>
 				<p class="about-as-heading-last">МЫ НЕ БУДЕМ МЕНЯТЬ МИР<br><span class="about-as-heading-color">МЫ ПЕРЕПИШЕМ КОД</span></p>
 				<article class="block-eight-link-block">
 					<button class="block-eight-link"><a href="https://sfera.zone/ru/" style="color:white">ПЕРЕЙТИ НА САЙТ SFERA</a></button>
 				</article>
-			</section>
+			</section> -->
 		</main>
 		<footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
