--- a/ru/team.html
+++ b/ru/team.html
@@ -73,7 +73,9 @@
       </div>
     </header>
     <main>
+      
       <div class="team">
+        <h1 class="lead__title">Наша команда</h1>
         <div class="team__body">
           <div class="team__column">
             <a class="block-team__item block-team__item_b item" href="#">
