--- a/ru/about.html
+++ b/ru/about.html
@@ -140,8 +140,10 @@
           <ul class="socials-list">
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
+            
           </ul>
         </div>
         <div class="footer__copyright">
