--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -12,8 +12,9 @@
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
   <link href="../assets/css/styles.0056da14.css" rel="stylesheet">
   <link href="../assets/css/downloads.css" rel="stylesheet">
-</head>
 
+
+</head>
 <body>
   <div class="page">
     <header class="header section section_theme_dark" role="header">
@@ -77,9 +78,8 @@
         <div class="lead__wrapper">
           <div class="lead__content">
             <div class="lead-text">
-              <h1 class="lead__title"> СКАЧАЙТЕ<br> ПРИЛОЖЕНИЕ SFERA</h1>
-              <p class="lead__subtitle">Присоединяйтесь к нам, давайте
-                <br> изменим мир вместе.</p>
+              <h1 class="lead__title"> скачивай<br><span  class="lead__title-color"> и тестируй</span></h1>
+              <p class="lead__subtitle">Скачивайте приложения и погружайтесь<br>в нашу цифровую экосистему.</p>
               <ul class="lead__download-links-list">
                 <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
                 <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
@@ -90,6 +90,26 @@
                 <img src="../assets/img/downloads/android .png" class="lead__image" /></div>
               <div class="lead__image__android">
                 <img src="../assets/img/downloads/ios.png" class="lead__image" /></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="description">
+        <div class="description__wrapper">
+          <div class="description__heading">
+            <div class="description__heading__content">
+              <h2 class="description__heading__as"><span class="description__heading__as-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</h2>
+              <ul class="description__list">
+                <li class="description__list__link description__list__link-color">#Что нужно тестировать?</li>
+                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Звонки</li>
+                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Отправка сообщений</li>
+                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Загрузка медиа</li>
+                <li class="description__list__link description__list__link-color">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
+              </ul>
+            </div>
+            <div class="description__heading__video">
+              <video class="description__video" src="../assets/video/trim.644BC43D-65AA-4772-94FB-E2D1C488CFEE.mov" controls="controls" autoplay>
+
             </div>
           </div>
         </div>
@@ -119,8 +139,10 @@
           <ul class="socials-list">
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
+            
           </ul>
         </div>
         <div class="footer__copyright">
