--- a/ru/startups.html
+++ b/ru/startups.html
@@ -75,44 +75,41 @@
     <main>
       <section class="section startups">
         <div class="section__wrapper">
-            <div class="lead">
-                <div class="lead__texts">
-                    <h1 class="lead__title">Приглашаем стартапы </br> в SFERA </h1>
-                    <p class="lead__text">Для действующих стартапов, которые </br> находятся на стадии разработки или уже </br> имеют работающий функционал мы готовы </br> рассмотреть вопрос интеграции в SFERA, </br>при соблюдении следующих условий.</p>
-                    <div class="lead__links-container apps__lead-links-container">
-                      <ul class="lead__download-links-list">
-                        <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                        <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
-                      </ul>
-                    </div>
-                </div>
-                <div class="lead__images"><img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" /></div>
+          <div class="lead">
+            <div class="lead__texts">
+              <h1 class="lead__title">Приглашаем стартапы </br> в SFERA </h1>
+              <p class="lead__text">Для действующих стартапов, которые </br> находятся на стадии разработки или уже </br> имеют работающий функционал мы готовы </br> рассмотреть вопрос интеграции в SFERA, </br>при соблюдении следующих условий.</p>
+              <div class="lead__links-container apps__lead-links-container">
+                <ul class="lead__download-links-list">
+                  <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+                  <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                </ul>
+              </div>
             </div>
-        </div>
+            <div class="lead__images">
+              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" /></div>
+            </div>
+          </div>
     </section>
-    <section class="section-two">
-        <div class="section__wrapper">
-            <div class="list">
-                <div class="list__items">
-                    <div class="list__circles">
-                        <div class="list__circle number-one">1</div>
-                        <div class="list__circle number-two">2</div>
-                        <div class="list__circle number-three">3</div>
-                        <div class="list__circle number-four">4</div>
-                    </div>
-                    <div class="list__texts">
-                        <ul class="text-list">
-                            <li class="text-list__list-item text-one">Сервис должен быть полезным </br> (развивающим) и оказывать позитивное </br> влияние на оффлайн-жизнь </br> пользователя.</li>
-                            <li class="text-list__list-item text-two">У вас есть проработанный макет и </br> концепция (включая полную прорисовку </br> сервиса в Figma, техническое описание- </br> задание), но нет финансовой </br> возможности реализовать сервис.</li>
-                            <li class="text-list__list-item text-three">Разработка сервиса в рамках SFERA, </br> обходится в разы дешевле, чем создание </br> отдельного приложения.</li>
-                            <li class="text-list__list-item text-four">Вы остаетесь правообладателем своего </br> сервиса и SFERA никак не может и не </br> будет претендовать на Ваш сервис за </br> пределами платформы.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="list__images"><img src="../assets/img/startups-png/frame_1619.png" class="list__image" /></div>
+    <section class="description">
+        <div class="description__wrapper">
+          <div class="description__list__main">
+            <div class="description__list__items">
+              <h2>условия сотрудничества</h2>
+              <ul class="description__list">
+                <li class="description__list__paragraf">Сервис должен быть полезным </br> (развивающим) и оказывать позитивное </br> влияние на оффлайн-жизнь </br> пользователя.</li>
+                <li class="description__list__paragraf">У вас есть проработанный макет и </br> концепция (включая полную прорисовку </br> сервиса в Figma, техническое описание- </br> задание), но нет финансовой </br> возможности реализовать сервис.</li>
+              </ul>
+              <h2>преимущества</h2>
+              <ul class="description__list">  
+                <li class="description__list__paragraf">Разработка сервиса в рамках SFERA, </br> обходится в разы дешевле, чем создание </br> отдельного приложения.</li>
+                <li class="description__list__paragraf">Вы остаетесь правообладателем своего </br> сервиса и SFERA никак не может и не </br> будет претендовать на Ваш сервис за </br> пределами платформы.</li>
+              </ul>
             </div>
+          </div>
         </div>
-        <div class="frame"> <img src="../assets/img/startups-png/frame.png" class="frame__image" />
+        <div class="frame"> 
+          <img src="../assets/img/startups-png/sfera.png" class="frame__image" />
             <p class="frame__text">Мы считаем, что многие сервисы, безусловно </br> полезны и нужны пользователям, но зачастую, из - </br> за высокой стоимости разработки или затрат на </br> привлечение пользователя, реализация проектов </br> становится невозможной. В рамках проекта </br> SFERA, в несколько раз снижается стоимость </br> разработки и нет необходимости нести </br> финансовые расходы на маркетинг.</p>
         </div>
     </section>
