--- a/ru/apps.html
+++ b/ru/apps.html
@@ -54,7 +54,7 @@
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
+            <li class="main-nav__item"> <a class="main-nav__link active" href="apps.html">Приложения</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="startups.html">Стартапам</a></li>
