--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -51,7 +51,7 @@
             <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
+            <li class="main-nav__item"> <a class="main-nav__link active" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="startups.html">Стартапам</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="investment.html">Инвестиции</a></li>
