--- a/ru/investment.html
+++ b/ru/investment.html
@@ -54,7 +54,7 @@
             <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="startups.html">Стартапам</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="investment.html">Инвестиции</a></li>
+            <li class="main-nav__item"> <a class="main-nav__link active" href="investment.html">Инвестиции</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
