--- a/ru/team.html
+++ b/ru/team.html
@@ -55,7 +55,7 @@
             <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="startups.html">Стартапам</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="investment.html">Инвестиции</a></li>
-            <li class="main-nav__item"> <a class="main-nav__link" href="team.html">Команда</a></li>
+            <li class="main-nav__item"> <a class="main-nav__link active" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
             <ul class="langs__list">
