--- a/ru/investment.html
+++ b/ru/investment.html
@@ -147,19 +147,19 @@
           предприятию, а не к более стабильной компании. Механизмом участия в успехе стартапа был опцион на покупку акций — бумажного обязательства, ставшего валютой Кремниевой долины. Опционы на акции превратили Кремневую долину в современный аналог золотой лихорадки.
             Опцион на акции дает сотруднику возможность в будущем приобретать акции в компании. Его ценность состоит в том, что сотрудник не должен платить за акции сразу, но цена, которую он заплатит в свое время, устанавливается в тот момент, когда сотрудник получает этот опцион, обычно тогда, когда он или она приходит на работу в компанию. Если компания становится очень успешной после того, как человек пришел туда работать, ценность акций может вырасти до астрономических сумм, но сотрудник заплатит именно ту сумму, которая была установлена в момент получения опциона. Остальное — его прибыль. Например, если акция компании на момент поступления человека стоит 1 доллар за штуку и если он получает опцион на покупку тысячи акций, пять лет спустя, если акции стоят по 100 долларов за штуку, человек все равно заплатит за них по 1 доллару. Он или она получит 99 долларов прибыли за каждую акцию, или 99 тысяч долларов прибыли. Именно так Кремниевая долина рождает на свет новых миллионеров и миллиардеров.
         </span></li>
-        <button id="btn" onclick="readMore()">Читать больше</button>
+        <a id="btn" onclick="readMore()">Читать больше</a>
       </ul>
     </div>
   </div>
 </div>
 <div class="sfera-2">
-  <div class="sfera-2__column">
+  <!-- <div class="sfera-2__column">
     <div class="sfera-2__image ibg"><img src="../assets/img/investment/investment_logo.png" alt=""></div>
-  </div>
+  </div> -->
   <div class="sfera-2__column">
     <div class="sfera-2-body">
       <div class="sfera-2-body-content">
-        <div class="sfera-2-body__uptext">Не делайте этого, если</div>
+        <div class="sfera-2-body__uptext">Не делайте этого, если:</div>
         <ul class="sfera-2-body__link">
           <li>Считаете, что это обман.</li>
           <li>Не верите в проект.</li>
@@ -172,13 +172,13 @@
   </div>
   
 </div>
-<div class="goal">
+<!-- <div class="goal">
   <div class="goal-body">
     <div class="goal-body-content">
       <div class="goal-body__title">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</div>
     </div>
   </div>
-</div>
+</div> -->
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
