--- a/ru/startups.html
+++ b/ru/startups.html
@@ -77,7 +77,7 @@
         <div class="section__wrapper">
           <div class="lead">
             <div class="lead__texts">
-              <h1 class="lead__title">Приглашаем стартапы </br> в SFERA </h1>
+              <h1 class="lead__title">приглашаем<br><span class="lead__title-color">стартапы</span></h1>
               <p class="lead__text">Для действующих стартапов, которые </br> находятся на стадии разработки или уже </br> имеют работающий функционал мы готовы </br> рассмотреть вопрос интеграции в SFERA, </br>при соблюдении следующих условий.</p>
               <div class="lead__links-container apps__lead-links-container">
                 <ul class="lead__download-links-list">
@@ -95,25 +95,30 @@
         <div class="description__wrapper">
           <div class="description__list__main">
             <div class="description__list__items">
-              <h2>условия сотрудничества</h2>
-              <ul class="description__list">
+              <h2 class="description__list__heading" >условия сотрудничества</h2>
+              <ol class="description__list">
                 <li class="description__list__paragraf">Сервис должен быть полезным </br> (развивающим) и оказывать позитивное </br> влияние на оффлайн-жизнь </br> пользователя.</li>
                 <li class="description__list__paragraf">У вас есть проработанный макет и </br> концепция (включая полную прорисовку </br> сервиса в Figma, техническое описание- </br> задание), но нет финансовой </br> возможности реализовать сервис.</li>
-              </ul>
-              <h2>преимущества</h2>
-              <ul class="description__list">  
-                <li class="description__list__paragraf">Разработка сервиса в рамках SFERA, </br> обходится в разы дешевле, чем создание </br> отдельного приложения.</li>
+              </ol>
+              <h2 class="description__list__heading">преимущества</h2>
+              <ol class="description__list">  
+                <li class="description__list__paragraf">Разработка сервиса в рамках SFERA,</br> обходится в разы дешевле, чем создание </br> отдельного приложения.</li>
                 <li class="description__list__paragraf">Вы остаетесь правообладателем своего </br> сервиса и SFERA никак не может и не </br> будет претендовать на Ваш сервис за </br> пределами платформы.</li>
-              </ul>
+              </ol>
             </div>
           </div>
         </div>
-        <div class="frame"> 
-          <img src="../assets/img/startups-png/sfera.png" class="frame__image" />
-            <p class="frame__text">Мы считаем, что многие сервисы, безусловно </br> полезны и нужны пользователям, но зачастую, из - </br> за высокой стоимости разработки или затрат на </br> привлечение пользователя, реализация проектов </br> становится невозможной. В рамках проекта </br> SFERA, в несколько раз снижается стоимость </br> разработки и нет необходимости нести </br> финансовые расходы на маркетинг.</p>
-        </div>
     </section>
-
+    <section class="frame">
+      <div class="frame__wrapper">
+        <div class="frame__list__main">
+          <ul  class="frame__list">
+            <li class="frame__list__item"><img src="../assets/img/startups-png/sfera.png"/></li>
+            <li class="frame__list__item">Мы считаем, что многие сервисы, безусловно полезны и нужны пользователям, но зачастую, из - за высокой стоимости разработки или затрат на привлечение пользователя, реализация проектов становится невозможной. В рамках проекта  SFERA, в несколько раз снижается стоимость разработки и нет необходимости нести финансовые расходы на маркетинг.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
