--- a/ru/team.html
+++ b/ru/team.html
@@ -81,6 +81,7 @@
     </header>
     <main>
       <div class="team">
+        <div class="team__title">наша команда</div>
         <div class="team__body">
           <div class="team__column">
             <a class="block-team__item block-team__item_b item" href="#">
