--- a/ru/investment.html
+++ b/ru/investment.html
@@ -160,7 +160,7 @@
           <li>Выделяемая сумма для вас значима.</li>
           <li>Вы не понимаете основ инвестирования в стартапы.</li>
         </ol>
-        <div class="sfera-2-body__downtext">Гарантией выполнения наших обязательств является репутация компании сейчас и в будущем.</div>
+        <div class="sfera-2-body__downtext">Гарантией выполнения наших обязательств является репутация<br> компании сейчас и в будущем.</div>
       </div>
     </div>
   </div>
