--- a/ru/investment.html
+++ b/ru/investment.html
@@ -89,7 +89,7 @@
       </div>
       
       <div class="investment__column">
-        <div class="investment__image ibg"><img src="../assets/img/investment/Graphite.jpg" alt=""></div>
+        <div class="investment__image ibg"><img src="../assets/img/investment/Graphite.png" alt=""></div>
       </div>
     </div>
     <section>
