--- a/ru/about.html
+++ b/ru/about.html
@@ -50,7 +50,7 @@
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">О проекте</a></li>
+            <!-- <li class="main-nav__item"><a class="main-nav__link" href="#">О проекте</a></li> -->
             <li class="main-nav__item"> <a class="main-nav__link" href="../ru/apps.html">Приложения</a>
             </li>
             <li class="main-nav__item"> <a class="main-nav__link" href="../ru/downloads.html">Скачать</a></li>
