--- a/ru/investment.html
+++ b/ru/investment.html
@@ -49,7 +49,7 @@
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="../index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
+            <!-- <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li> -->
             <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="news.html">Новости</a></li>
@@ -103,9 +103,9 @@
             <div class="card-body-content">
               <ul class="card-body__link">
                 <li class="card-body__list_1"> Скопируйте номер карты и отправьте желаемую сумму.</li>
-                <p class="card-body__list_2">4584-4328-3958-7574 <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></p>
+                <p class="card-body__list">4584-4328-3958-7574 <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></p>
                 <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
-                <li class="card-body__list_4">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
+                <li class="card-body__list">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
               </ul>
               <div class="card-body__text">Осуществляя перевод, вы подтверждаете, что четко понимаете основы и понятия венчурного инвестирования и принципов работы стартапа, а также все риски, связанные с этим.</div>
             </div>
