--- a/ru/news.html
+++ b/ru/news.html
@@ -48,7 +48,7 @@
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li>
+            <!-- <li class="main-nav__item"><a class="main-nav__link" href="about.html">О проекте</a></li> -->
             <li class="main-nav__item"> <a class="main-nav__link" href="apps.html">Приложения</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="downloads.html">Скачать</a></li>
             <li class="main-nav__item"> <a class="main-nav__link" href="#">Новости</a></li>
